# OSCPack-Modern

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client-main.cpp  server-main.cpp
